files/etc/sysconfig/iptables
*filter
-P INPUT DROP
-P OUTPUT DROP
-P FORWARD DROP
-A INPUT -p icmp --icmp-type time-exceeded -j ACCEPT 
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT
-A OUTPUT -p icmp --icmp-type echo-request -j ACCEPT
-A OUTPUT -p icmp --icmp-type echo-reply -j ACCEPT
-A INPUT -i lo -j ACCEPT 
-A INPUT -i eth0 -p tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p udp --dport 53 -j ACCEPT
-A INPUT -p udp --sport 53 -j ACCEPT
-A OUTPUT -o eth0 -p udp --dport 123 -j ACCEPT
-A INPUT -i eth0 -p udp --sport 123 -j ACCEPT
-A OUTPUT -o eth0 -p udp --dport 514 -j ACCEPT
-A OUTPUT -p udp --dport 33200:33500 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp --sport 33200:33500 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
